<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/poly"
    tools:context=".NewQuestionsCreate">

    <TextView
        android:id="@+id/test_title_textView"
        android:layout_width="269dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/test_title_textView"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="10pt"
        app:layout_constraintEnd_toStartOf="@+id/q_number_textView"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/q_number_textView"
        android:layout_width="57dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/q_number_textView"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/q_info_textView"
        android:layout_width="317dp"
        android:layout_height="74dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/q_info_textView"
        android:textAlignment="center"
        android:textColor="@color/colorPurpole"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_title_textView" />

    <EditText
        android:id="@+id/editTextQ"
        android:layout_width="272dp"
        android:layout_height="41dp"
        android:layout_alignParentLeft="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/q_hint_editView"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/q_qestionTextView"
        app:layout_constraintTop_toBottomOf="@+id/q_info_textView" />

    <EditText
        android:id="@+id/editTextA1"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/a1_hint_editView"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/A1_option_textView"
        app:layout_constraintTop_toBottomOf="@+id/editTextQ" />

    <EditText
        android:id="@+id/editTextA2"
        android:layout_width="268dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/a2_hint_editView"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/A2_option_textView"
        app:layout_constraintTop_toBottomOf="@+id/editTextA1" />

    <EditText
        android:id="@+id/editTextA3"
        android:layout_width="271dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/a3_hint_editView"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/A3_option_textView"
        app:layout_constraintTop_toBottomOf="@+id/editTextA2" />

    <EditText
        android:id="@+id/editTextA4"
        android:layout_width="270dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/a4_hint_editView"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/A4_option_textView"
        app:layout_constraintTop_toBottomOf="@+id/editTextA3" />

    <EditText
        android:id="@+id/editTextAns"
        android:layout_width="149dp"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/ans_hint_editView"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="5pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Ans_option_textView"
        app:layout_constraintTop_toBottomOf="@+id/editTextA4" />

    <Button
        android:id="@+id/add_question_btn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorRed"
        android:text="@string/add_questionBtn"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/finish_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ans_option_textView"
        app:layout_constraintVertical_bias="0.444" />

    <Button
        android:id="@+id/finish_btn"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorRed"
        android:text="@string/finish_btn"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_question_btn"
        app:layout_constraintTop_toBottomOf="@+id/editTextAns"
        app:layout_constraintVertical_bias="0.312" />

    <TextView
        android:id="@+id/q_qestionTextView"
        android:layout_width="68dp"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/q_option_textView"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toStartOf="@+id/editTextQ"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q_info_textView" />

    <TextView
        android:id="@+id/A1_option_textView"
        android:layout_width="72dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/a1_option_texttView"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toStartOf="@+id/editTextA1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q_qestionTextView" />

    <TextView
        android:id="@+id/A2_option_textView"
        android:layout_width="74dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/a2_option_texttView"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toStartOf="@+id/editTextA2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/A1_option_textView" />

    <TextView
        android:id="@+id/A3_option_textView"
        android:layout_width="76dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/a3_option_texttView"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toStartOf="@+id/editTextA3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/A2_option_textView" />

    <TextView
        android:id="@+id/A4_option_textView"
        android:layout_width="63dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/a4_option_texttView"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toStartOf="@+id/editTextA4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/A3_option_textView" />

    <TextView
        android:id="@+id/Ans_option_textView"
        android:layout_width="173dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/ans_option_texttView"
        android:textColor="@color/colorBlack"
        android:textSize="5pt"
        app:layout_constraintEnd_toStartOf="@+id/editTextAns"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/A4_option_textView" />


</android.support.constraint.ConstraintLayout>