<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/poly"
    tools:context=".AdminMain">

    <Button
        android:id="@+id/create_test_btn"
        android:layout_width="180dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorRed"
        android:text="@string/create_new_test_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_title_textView" />

    <TextView
        android:id="@+id/get_score_textView"
        android:layout_width="299dp"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/get_score_textView"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_test_btn" />

    <EditText
        android:id="@+id/enter_subject_for_Scores_editView"
        android:layout_width="244dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/enter_subject_editBox"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_score_textView" />

    <RadioGroup
        android:id="@+id/password_radioGroup"
        android:layout_width="266dp"
        android:layout_height="76dp"
        android:layout_marginEnd="56dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_change_textView">

        <RadioButton
            android:id="@+id/admin_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_weight="1"
            android:text="@string/admin_radio_btn"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="6pt" />

        <RadioButton
            android:id="@+id/student_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/student_radio_btn"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="6pt" />
    </RadioGroup>

    <TextView
        android:id="@+id/password_change_textView"
        android:layout_width="248dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/password_change_textView"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="5pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_scoreBtn" />

    <TextView
        android:id="@+id/current_password_textView"
        android:layout_width="268dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/current_password_textView"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_radioGroup" />

    <EditText
        android:id="@+id/changePassword_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_newPassord"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_password_textView" />

    <Button
        android:id="@+id/commit_newPassword_btn"
        android:layout_width="189dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorRed"
        android:text="@string/commit_new_password_Btn"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword_editText"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/admin_title_textView"
        android:layout_width="232dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/admin_title_textView"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/get_scoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPurpole"
        android:text="@string/get_score_btn"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_subject_for_Scores_editView" />

</android.support.constraint.ConstraintLayout>